<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BluetoothCommunicationActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/bt_device_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDeviceNameDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/bt_device_address"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/tvDeviceAddressDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@+id/tvDeviceNameDisplay"
        app:layout_constraintTop_toBottomOf="@+id/tvDeviceNameDisplay" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/wifi_ssid_input"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/wifi_pass_input"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/etWifiSsid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/tvDeviceAddressDisplay" />

    <EditText
        android:id="@+id/etWifiPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/etWifiSsid" />

    <Button
        android:id="@+id/button1"
        android:layout_width="81dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:onClick="arduinoSaveWifiSsid"
        android:paddingStart="2dp"
        android:paddingLeft="2dp"
        android:paddingTop="2dp"
        android:paddingEnd="2dp"
        android:paddingRight="2dp"
        android:paddingBottom="2dp"
        android:text="@string/btn_save"
        app:cornerRadius="4dp"
        app:layout_constraintStart_toEndOf="@+id/etWifiSsid"
        app:layout_constraintTop_toTopOf="@+id/etWifiSsid" />

    <Button
        android:id="@+id/button2"
        android:layout_width="97dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:onClick="arduinoRequestData"
        android:paddingStart="2dp"
        android:paddingLeft="2dp"
        android:paddingTop="2dp"
        android:paddingEnd="2dp"
        android:paddingRight="2dp"
        android:paddingBottom="2dp"
        android:text="@string/btn_fetch_ard_info"
        app:cornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="81dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:onClick="arduinoSaveWifiPassword"
        android:paddingStart="2dp"
        android:paddingLeft="2dp"
        android:paddingTop="2dp"
        android:paddingEnd="2dp"
        android:paddingRight="2dp"
        android:paddingBottom="2dp"
        android:text="@string/btn_save"
        app:cornerRadius="4dp"
        app:layout_constraintStart_toEndOf="@+id/etWifiPass"
        app:layout_constraintTop_toTopOf="@+id/etWifiPass" />

    <Button
        android:id="@+id/button4"
        android:layout_width="81dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:onClick="arduinoSaveServerUrl"
        android:paddingStart="2dp"
        android:paddingLeft="2dp"
        android:paddingTop="2dp"
        android:paddingEnd="2dp"
        android:paddingRight="2dp"
        android:paddingBottom="2dp"
        android:text="@string/btn_save"
        app:cornerRadius="4dp"
        app:layout_constraintStart_toEndOf="@+id/etServerUrl"
        app:layout_constraintTop_toTopOf="@+id/etServerUrl" />

    <Button
        android:id="@+id/button5"
        android:layout_width="81dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:onClick="arduinoSaveInterval"
        android:paddingStart="2dp"
        android:paddingLeft="2dp"
        android:paddingTop="2dp"
        android:paddingEnd="2dp"
        android:paddingRight="2dp"
        android:paddingBottom="2dp"
        android:text="@string/btn_save"
        app:cornerRadius="4dp"
        app:layout_constraintStart_toEndOf="@+id/etSendInterval"
        app:layout_constraintTop_toTopOf="@+id/etSendInterval" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/ard_server_url"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/etServerUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/etWifiPass"
        app:layout_constraintTop_toBottomOf="@+id/etWifiPass" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="88dp"
        android:layout_height="57dp"
        android:layout_marginTop="24dp"
        android:text="@string/ard_send_interval"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/etSendInterval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/etServerUrl"
        app:layout_constraintTop_toBottomOf="@+id/etServerUrl" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:onClick="arduinoStartup"
        android:text="@string/btn_ard_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSendInterval" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:onClick="arduinoShutdown"
        android:text="@string/btn_ard_shutdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSendInterval" />

</androidx.constraintlayout.widget.ConstraintLayout>